# mcp_server

./: .gitignore  pyproject.toml  requirements.txt
src/: main.py  mcp_chatbot.py  research_server.py  server_config.json
