[project]
name = "mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.2",
    "aioresponses>=0.7.8",
    "arxiv>=2.3.1",
    "asyncio>=4.0.0",
    "langchain>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.1.0",
    "mcp>=1.22.0",
    "nest-asyncio>=1.6.0",
    "pandas>=2.3.3",
    "pathlib>=1.0.1",
    "pydantic>=2.12.4",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "requests-mock>=1.12.1",
    "tiktoken>=0.12.0",
    "uv>=0.9.12",
]
